Change local image paths to online URLs
Updated image sources and background to use online URLs instead of local paths.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <HTML>
 <HEAD>
-<link rel="icon" href="C:\Users\user\Pictures\favicon.png">
+<link rel="icon" href="https://www.shutterstock.com/image-vector/vector-isolated-donut-modern-flat-260nw-487051210.jpg">
 <TITLE>Proyecto Mini Autobiografía</TITLE>
 </HEAD>
 
-<BODY BACKGROUND="C:\Users\user\Downloads\fondo-textura-acuarela-violeta_1083-172.jpg" TEXT="BLACK"
+<BODY BACKGROUND="https://marketplace.canva.com/EAFcLpiTbQU/2/0/1600w/canva-fondo-de-pantalla-abstracto-formas-org%C3%A1nicas-rosado-C4V5tMB1ipI.jpg" TEXT="BLACK"
 <BR>
 <CENTER>
 <H1 style="color: WHITE"> MI MINI BIOGRAFIA </H1>
@@ -38,4 +38,5 @@
 <li>He logrado superarme a mi misma cada año, mejorar mis habilidades y perfeccionar mis talentos obteniendo los resultados que buscaba</li>
 </H3>
 <IMG SRC="C:\Users\user\Downloads\f7c635bb-fad5-4ffe-bb15-2369f54828e3.jpg" WIDTH="300" HEIGHT="400">
+
 
