--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <TITLE>Proyecto Mini Autobiografía</TITLE>
 </HEAD>
 
-<BODY BACKGROUND="" TEXT="BLACK"
+<BODY BACKGROUND="https://marketplace.canva.com/EAFcLpiTbQU/2/0/1600w/canva-fondo-de-pantalla-abstracto-formas-org%C3%A1nicas-rosado-C4V5tMB1ipI.jpg" TEXT="BLACK"
 <BR>
 <CENTER>
 <H1 style="color: WHITE"> MI MINI BIOGRAFIA </H1>
@@ -38,6 +38,7 @@
 <li>He logrado superarme a mi misma cada año, mejorar mis habilidades y perfeccionar mis talentos obteniendo los resultados que buscaba</li>
 </H3>
 <IMG SRC="C:\Users\user\Downloads\f7c635bb-fad5-4ffe-bb15-2369f54828e3.jpg" WIDTH="300" HEIGHT="400">
+
 
 
 
