--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <li>He mejorado tanto en el violín que con orquestas he llegado a viajar a muchos lugares</li>
 <li>He logrado superarme a mi misma cada año, mejorar mis habilidades y perfeccionar mis talentos obteniendo los resultados que buscaba</li>
 </H3>
-<IMG SRC="C:\Users\user\Downloads\f7c635bb-fad5-4ffe-bb15-2369f54828e3.jpg" WIDTH="300" HEIGHT="400">
+<IMG SRC="https://png.pngtree.com/png-clipart/20250131/original/pngtree-golden-trophy-with-a-yellow-rim-sticker-design-png-image_19380283.png" WIDTH="300" HEIGHT="400">
+
 
 
 
